Respondidas as questões 3.1, 3.2 e 3.3

--- a/PP2_2_1_Conhecendo_o_Conjunto_de_Dados.ipynb
+++ b/PP2_2_1_Conhecendo_o_Conjunto_de_Dados.ipynb
@@ -78,16 +78,7 @@
         "id": "KABVgstMcexI"
       },
       "source": [
-        ""
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "czD6Ht5XcexI"
-      },
-      "source": [
-        ""
+        "**3.1 - Resposta:** Cada exemplo corresponde a uma área de 30m x 30m localizadas nas quatro áreas selvagens da Floresta Nacional Roosevelt, no norte do Colorado, Estados Unidos. "
       ]
     },
     {
@@ -96,7 +87,16 @@
         "id": "Cy_pa6ZscexJ"
       },
       "source": [
-        ""
+        "**3.2 - Resposta:** Segundo a documentação encontrada no site https://archive.ics.uci.edu/ml/datasets/covertype, a data de publicação da base de dados é 01/08/1998. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "czD6Ht5XcexI"
+      },
+      "source": [
+        "**3.3 - Resposta:** os responsáveis pela base de dados são: Jock A. Blackard e os professores Dr. Denis J. Dean e Dr, Charles W. Anderson, da Universidade do Colorado. "
       ]
     },
     {
