--- a/PP2_2_1_Conhecendo_o_Conjunto_de_Dados.ipynb
+++ b/PP2_2_1_Conhecendo_o_Conjunto_de_Dados.ipynb
@@ -1,36 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.6.10"
-    },
-    "colab": {
-      "name": "PP2_2_1_Conhecendo_o_Conjunto_de_Dados.ipynb",
-      "provenance": [],
-      "include_colab_link": true
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/willianszwy/Forest-Cover-Type/blob/main/PP2_2_1_Conhecendo_o_Conjunto_de_Dados.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -63,15 +37,15 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 14,
       "metadata": {
         "id": "DIZUa8u4cexH"
       },
+      "outputs": [],
       "source": [
         "## Reservado para a importação de bibliotecas\n",
         "import pandas as pd"
-      ],
-      "execution_count": 14,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -131,21 +105,18 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 12,
       "metadata": {
-        "id": "MNGIFOrEcexJ",
-        "outputId": "e6c1fbae-36eb-44b1-de0c-091bf3840c9c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "MNGIFOrEcexJ",
+        "outputId": "e6c1fbae-36eb-44b1-de0c-091bf3840c9c"
       },
-      "source": [
-        "!wget https://archive.ics.uci.edu/ml/machine-learning-databases/covtype/covtype.data.gz"
-      ],
-      "execution_count": 12,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "--2021-11-22 05:09:00--  https://archive.ics.uci.edu/ml/machine-learning-databases/covtype/covtype.data.gz\n",
             "Resolving archive.ics.uci.edu (archive.ics.uci.edu)... 128.195.10.252\n",
@@ -160,31 +131,34 @@
             "\n"
           ]
         }
+      ],
+      "source": [
+        "!wget https://archive.ics.uci.edu/ml/machine-learning-databases/covtype/covtype.data.gz"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 13,
       "metadata": {
         "id": "IsO0YGLpcexJ"
       },
+      "outputs": [],
       "source": [
         "!gunzip covtype.data.gz"
-      ],
-      "execution_count": 13,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 31,
       "metadata": {
         "id": "h9sUvOa9cexK"
       },
+      "outputs": [],
       "source": [
         "columns = ['Elevation', 'Aspect', 'Slope', 'Horizontal_Distance_To_Hydrology', 'Vertical_Distance_To_Hydrology', 'Horizontal_Distance_To_Roadways', 'Hillshade_9am', 'Hillshade_Noon', 'Hillshade_3pm', 'Horizontal_Distance_To_Fire_Points', 'Wilderness_Area1', 'Wilderness_Area2', 'Wilderness_Area3', 'Wilderness_Area4', 'Soil_Type1', 'Soil_Type2', 'Soil_Type3', 'Soil_Type4', 'Soil_Type5', 'Soil_Type6', 'Soil_Type7', 'Soil_Type8', 'Soil_Type9', 'Soil_Type10', 'Soil_Type11', 'Soil_Type12', 'Soil_Type13', 'Soil_Type14', 'Soil_Type15', 'Soil_Type16', 'Soil_Type17', 'Soil_Type18', 'Soil_Type19', 'Soil_Type20', 'Soil_Type21', 'Soil_Type22', 'Soil_Type23', 'Soil_Type24', 'Soil_Type25', 'Soil_Type26', 'Soil_Type27', 'Soil_Type28', 'Soil_Type29', 'Soil_Type30', 'Soil_Type31', 'Soil_Type32', 'Soil_Type33', 'Soil_Type34', 'Soil_Type35', 'Soil_Type36', 'Soil_Type37', 'Soil_Type38', 'Soil_Type39', 'Soil_Type40', 'Cover_Type']\n",
         "\n",
         "df_forest_cover = pd.read_csv(\"covtype.data\", names = columns)"
-      ],
-      "execution_count": 31,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -197,21 +171,17 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 32,
       "metadata": {
-        "id": "4UaGQez2cexK",
-        "outputId": "74ec34b3-c4e9-4bac-c20a-47fe76bdacb0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 383
-        }
+        },
+        "id": "4UaGQez2cexK",
+        "outputId": "74ec34b3-c4e9-4bac-c20a-47fe76bdacb0"
       },
-      "source": [
-        "df_forest_cover.head(10)"
-      ],
-      "execution_count": 32,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/html": [
               "<div>\n",
@@ -890,9 +860,13 @@
               "[10 rows x 55 columns]"
             ]
           },
+          "execution_count": 32,
           "metadata": {},
-          "execution_count": 32
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "df_forest_cover.head(10)"
       ]
     },
     {
@@ -906,21 +880,17 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 33,
       "metadata": {
-        "id": "1c-9vcEiUUON",
-        "outputId": "b2c427d2-ae10-4db1-d774-8a0353b0993e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 383
-        }
+        },
+        "id": "1c-9vcEiUUON",
+        "outputId": "b2c427d2-ae10-4db1-d774-8a0353b0993e"
       },
-      "source": [
-        "df_forest_cover.tail(10)"
-      ],
-      "execution_count": 33,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/html": [
               "<div>\n",
@@ -1599,9 +1569,13 @@
               "[10 rows x 55 columns]"
             ]
           },
+          "execution_count": 33,
           "metadata": {},
-          "execution_count": 33
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "df_forest_cover.tail(10)"
       ]
     },
     {
@@ -1615,25 +1589,25 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 35,
       "metadata": {
-        "id": "6STzzqX-UnZx",
-        "outputId": "f9b8c132-839f-405c-f3e8-04bc921f4b25",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6STzzqX-UnZx",
+        "outputId": "f9b8c132-839f-405c-f3e8-04bc921f4b25"
       },
-      "source": [
-        "print(\"A base de dados possui {0} exemplos\".format(len(df_forest_cover)))"
-      ],
-      "execution_count": 35,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "A base de dados possui 581012 exemplos\n"
           ]
         }
+      ],
+      "source": [
+        "print(\"A base de dados possui {0} exemplos\".format(len(df_forest_cover)))"
       ]
     },
     {
@@ -1647,28 +1621,28 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 38,
       "metadata": {
-        "id": "OXylQOV7VE3K",
-        "outputId": "13f2aa59-36fd-4a37-dc2c-b5227fae2602",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "OXylQOV7VE3K",
+        "outputId": "13f2aa59-36fd-4a37-dc2c-b5227fae2602"
       },
-      "source": [
-        "df_forest_cover.shape"
-      ],
-      "execution_count": 38,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "(581012, 55)"
             ]
           },
+          "execution_count": 38,
           "metadata": {},
-          "execution_count": 38
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "df_forest_cover.shape"
       ]
     },
     {
@@ -1682,20 +1656,16 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 39,
       "metadata": {
-        "id": "ZP5C5NN-WNFr",
-        "outputId": "09893213-880d-4cf5-b47a-554f591b7cb1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ZP5C5NN-WNFr",
+        "outputId": "09893213-880d-4cf5-b47a-554f591b7cb1"
       },
-      "source": [
-        "df_forest_cover.columns"
-      ],
-      "execution_count": 39,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "Index(['Elevation', 'Aspect', 'Slope', 'Horizontal_Distance_To_Hydrology',\n",
@@ -1716,9 +1686,13 @@
               "      dtype='object')"
             ]
           },
+          "execution_count": 39,
           "metadata": {},
-          "execution_count": 39
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "df_forest_cover.columns"
       ]
     },
     {
@@ -1732,20 +1706,16 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 40,
       "metadata": {
-        "id": "dSFp-rVjWR4a",
-        "outputId": "0aa78885-d217-492e-f8a4-54e3eb3d4c99",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dSFp-rVjWR4a",
+        "outputId": "0aa78885-d217-492e-f8a4-54e3eb3d4c99"
       },
-      "source": [
-        "df_forest_cover.dtypes"
-      ],
-      "execution_count": 40,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "Elevation                             int64\n",
@@ -1806,9 +1776,13 @@
               "dtype: object"
             ]
           },
+          "execution_count": 40,
           "metadata": {},
-          "execution_count": 40
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "df_forest_cover.dtypes"
       ]
     },
     {
@@ -1822,25 +1796,25 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "uXBGW9JkYGSO"
       },
+      "outputs": [],
       "source": [
         "df_forest_cover.isna()"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "0L4AEsbpZDjj"
       },
+      "outputs": [],
       "source": [
         "df_forest_cover.isnull()"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1871,69 +1845,110 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "aQ1Aw0RscexL"
       },
+      "outputs": [],
       "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+        "df_forest_cover.hist('Elevation', bins=20)\n",
+        "df_forest_cover.hist('Aspect', bins=20)\n",
+        "df_forest_cover.hist('Slope', bins=20)\n",
+        "df_forest_cover.hist('Horizontal_Distance_To_Hydrology', bins=20)\n",
+        "df_forest_cover.hist('Vertical_Distance_To_Hydrology', bins=20)\n",
+        "df_forest_cover.hist('Horizontal_Distance_To_Roadways', bins=20)\n",
+        "df_forest_cover.hist('Hillshade_9am', bins=20)\n",
+        "df_forest_cover.hist('Hillshade_Noon', bins=20)\n",
+        "df_forest_cover.hist('Hillshade_3pm', bins=20)\n",
+        "df_forest_cover.hist('Horizontal_Distance_To_Fire_Points', bins=20)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "2. A partir da visualização elaborada, o que pode-se dizer a respeito do balanceamento do atributo-alvo?"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "eWHso8GhcexL"
       },
+      "outputs": [],
       "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+        "df_forest_cover.hist('Cover_Type')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Resp. 2: Pode-se afirmar que um número próximo de 500 mil amostra dos dados é classificada como possuindo cobertura do tipo 1 ou 2."
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "VW6PTSdgcexL"
       },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "l0iaN8K2cexL"
       },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "Z4hknKHPcexL"
       },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "OeNPr9K2cexL"
       },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "name": "PP2_2_1_Conhecendo_o_Conjunto_de_Dados.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.6.10"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
