Manipulação dos dados finalizada

--- a/PP2_2_1_Conhecendo_o_Conjunto_de_Dados.ipynb
+++ b/PP2_2_1_Conhecendo_o_Conjunto_de_Dados.ipynb
@@ -70,7 +70,7 @@
         "## Reservado para a importação de bibliotecas\n",
         "import pandas as pd"
       ],
-      "execution_count": 1,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -126,7 +126,7 @@
         "id": "3W-xIbT5W4r_"
       },
       "source": [
-        "1. Abra a base de dados com o pandas"
+        "**1 - Resposta:**"
       ]
     },
     {
@@ -136,27 +136,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MNGIFOrEcexJ",
-        "outputId": "da8d94cf-d0c5-4a35-d24f-ac9fcd859d8e"
+        "outputId": "0ab250b4-bf42-44fe-a718-548519d84a46"
       },
       "source": [
         "!wget https://archive.ics.uci.edu/ml/machine-learning-databases/covtype/covtype.data.gz"
       ],
-      "execution_count": 2,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2021-11-22 21:01:20--  https://archive.ics.uci.edu/ml/machine-learning-databases/covtype/covtype.data.gz\n",
+            "--2021-11-22 22:17:39--  https://archive.ics.uci.edu/ml/machine-learning-databases/covtype/covtype.data.gz\n",
             "Resolving archive.ics.uci.edu (archive.ics.uci.edu)... 128.195.10.252\n",
             "Connecting to archive.ics.uci.edu (archive.ics.uci.edu)|128.195.10.252|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 11240707 (11M) [application/x-httpd-php]\n",
             "Saving to: ‘covtype.data.gz’\n",
             "\n",
-            "covtype.data.gz     100%[===================>]  10.72M  37.8MB/s    in 0.3s    \n",
+            "\rcovtype.data.gz       0%[                    ]       0  --.-KB/s               \rcovtype.data.gz     100%[===================>]  10.72M  --.-KB/s    in 0.1s    \n",
             "\n",
-            "2021-11-22 21:01:20 (37.8 MB/s) - ‘covtype.data.gz’ saved [11240707/11240707]\n",
+            "2021-11-22 22:17:40 (73.0 MB/s) - ‘covtype.data.gz’ saved [11240707/11240707]\n",
             "\n"
           ]
         }
@@ -165,13 +165,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IsO0YGLpcexJ"
+        "id": "IsO0YGLpcexJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "921ab6b0-7742-46f4-c9ac-b71b200c93b3"
       },
       "source": [
         "!gunzip covtype.data.gz"
       ],
-      "execution_count": 3,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "gzip: covtype.data already exists; do you wish to overwrite (y or n)? n\n",
+            "\tnot overwritten\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -183,7 +196,7 @@
         "\n",
         "df_forest_cover = pd.read_csv(\"covtype.data\", names = columns)"
       ],
-      "execution_count": 4,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -192,7 +205,7 @@
         "id": "ySpKZhPMUD1b"
       },
       "source": [
-        "2. 10 primeiros exemplos: "
+        "**2 - Resposta:** 10 primeiros exemplos"
       ]
     },
     {
@@ -203,12 +216,12 @@
           "height": 379
         },
         "id": "4UaGQez2cexK",
-        "outputId": "6522e744-d369-4a7d-d2c8-1ceed3a4f942"
+        "outputId": "89875264-88b7-4181-f075-079bcb38fb29"
       },
       "source": [
         "df_forest_cover.head(10)"
       ],
-      "execution_count": 5,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -891,7 +904,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 20
         }
       ]
     },
@@ -901,7 +914,7 @@
         "id": "r43DM-6WUUn4"
       },
       "source": [
-        "3. 10 últimos exemplos"
+        "**3 - Resposta:** 10 últimos exemplos"
       ]
     },
     {
@@ -912,12 +925,12 @@
           "height": 379
         },
         "id": "1c-9vcEiUUON",
-        "outputId": "435f8b74-96ae-43a0-e2d1-732642a4ca56"
+        "outputId": "3afb0d76-195b-46a8-d06f-fcde12baef78"
       },
       "source": [
         "df_forest_cover.tail(10)"
       ],
-      "execution_count": 6,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1600,7 +1613,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 21
         }
       ]
     },
@@ -1610,7 +1623,7 @@
         "id": "9gcKgjiEUz_D"
       },
       "source": [
-        "4. Quantos exemplos esta base de dados possui?"
+        "**4 - Resposta:**"
       ]
     },
     {
@@ -1620,12 +1633,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6STzzqX-UnZx",
-        "outputId": "c623f03a-03a6-4714-c576-6c931fd694c2"
+        "outputId": "e3c05a55-90a3-4bfb-f2d5-a5d35507b81c"
       },
       "source": [
         "print(\"A base de dados possui {0} exemplos\".format(len(df_forest_cover)))"
       ],
-      "execution_count": 7,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -1642,7 +1655,7 @@
         "id": "w8LdCdscVFmC"
       },
       "source": [
-        "5. Quais são os atributos que a base de dados possui e quais seus tipos?"
+        "**5 - Resposta:**"
       ]
     },
     {
@@ -1652,12 +1665,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OXylQOV7VE3K",
-        "outputId": "0ffe2a55-56d6-4845-857a-6524e7215400"
+        "outputId": "84198b31-e24d-47fc-867c-edbd33b16b08"
       },
       "source": [
         "df_forest_cover.shape"
       ],
-      "execution_count": 8,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1667,7 +1680,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 23
         }
       ]
     },
@@ -1677,7 +1690,7 @@
         "id": "ge5eQfHgVElN"
       },
       "source": [
-        "**Resposta:** Cada exemplo possui 55 atributos, sendo eles informardos na célula a seguir:"
+        "Cada exemplo possui 55 atributos, sendo eles informardos na célula a seguir:"
       ]
     },
     {
@@ -1687,12 +1700,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZP5C5NN-WNFr",
-        "outputId": "a78eb438-a5a9-4544-d18f-49d22b3db0fc"
+        "outputId": "07a7eb4d-b8fa-488a-d89d-7af587488fdd"
       },
       "source": [
         "df_forest_cover.columns"
       ],
-      "execution_count": 9,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1717,7 +1730,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 24
         }
       ]
     },
@@ -1737,12 +1750,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dSFp-rVjWR4a",
-        "outputId": "df7140e9-b2c1-4c34-83ff-1c5c05db9cec"
+        "outputId": "4893a16b-70fd-418f-e263-ce22d88148f8"
       },
       "source": [
         "df_forest_cover.dtypes"
       ],
-      "execution_count": 10,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1807,7 +1820,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 25
         }
       ]
     },
@@ -1817,23 +1830,23 @@
         "id": "5gbk8JiAWw0L"
       },
       "source": [
-        "6. Há algum dado faltante na base?"
+        "**6 - Resposta:**"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "uXBGW9JkYGSO",
-        "outputId": "f29a48e3-839e-46b3-9bd4-9a7825cb869a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 439
-        }
+        },
+        "outputId": "e4b2c167-3cd7-4e81-887b-6dbdcb53a7ee"
       },
       "source": [
         "df_forest_cover.isna()"
       ],
-      "execution_count": 11,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2576,7 +2589,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 26
         }
       ]
     },
@@ -2584,16 +2597,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "0L4AEsbpZDjj",
-        "outputId": "8c1a9e08-bf3d-4fed-c7dc-bb4af8b5a823",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 439
-        }
+        },
+        "outputId": "1aebbac8-1a40-4326-cc30-a6939e72219f"
       },
       "source": [
         "df_forest_cover.isnull()"
       ],
-      "execution_count": 12,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3336,17 +3349,8 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 27
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "0LOv7mCVc6FX"
-      },
-      "source": [
-        ""
       ]
     },
     {
@@ -3355,8 +3359,21 @@
         "id": "S_rBqsLXZLKD"
       },
       "source": [
-        "**Resposta:** Como podemos ver, as funções ```isna``` e ```isnull``` não identificaram nenhuma irregularidade com os dados. Conclui-se então que não há dados faltantes.\n",
+        "Como podemos ver, as funções ```isna``` e ```isnull``` não identificaram nenhuma irregularidade com os dados. Conclui-se então que não há dados faltantes.\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZcIyFCBXr5q9"
+      },
+      "source": [
+        "**7 - Resposta:** ``Soil_Type`` é uma classe que indica a designação do solo, dividida em 40 colunas binárias na base de dados sendo que cada coluna é um valor binário indicando qual valor da classe o exemplo faz parte: **0** é ausência e **1** é presença do tipo de solo.\n",
+        "\n",
+        "O atributo é um valor qualitativo para a base de dados.\n",
+        "\n",
+        "Como esse atributo foi convertido de uma classe com ***n*** elementos para valores binários entre 0 e 1 ao longo de ***n*** novas colunas, o método de codificação utilizado foi *One Hot Encoding*."
       ]
     },
     {
@@ -3368,12 +3385,12 @@
         "### Visualizando a base de dados\n",
         "\n",
         "1. Baseando-se nos fundamentos de visualização de dados abordados na disciplina, plote cada um dos atributos preditores de maneira a enfatizar a sua distribuição, tendência central e dispersão  \n",
-        "1.1 Considere que o número de colunas no dataset é diferente do número de atributos, conforme discussão promovida a respeito do dataset  \n",
-        "1.2 Se preferir, opte por complementar as informações visuais com medidas estatísticas  \n",
+        "  1.1. Considere que o número de colunas no dataset é diferente do número de atributos, conforme discussão promovida a respeito do dataset  \n",
+        "  1.2. Se preferir, opte por complementar as informações visuais com medidas estatísticas  \n",
         "2. A partir da visualização elaborada, o que pode-se dizer a respeito do balanceamento do atributo-alvo?\n",
         "3. Que tipo de tarefa de Aprendizado de Máquina é sugestiva para este problema?  \n",
-        "3.1 Apresente métricas de desempenho compatíveis para a avaliação do problema (liste-as)  \n",
-        "3.2 Escolha uma das métricas apresentadas para ser utilizada como referência pela equipe"
+        "  3.1. Apresente métricas de desempenho compatíveis para a avaliação do problema (liste-as)  \n",
+        "  3.2. Escolha uma das métricas apresentadas para ser utilizada como referência pela equipe"
       ]
     },
     {
@@ -3382,18 +3399,18 @@
         "id": "UOvApJtKdT--"
       },
       "source": [
-        "1. Plote do gráfico para distribuição, tendência central e dispersão para os dados."
+        "**1 - Resposta:** Plote dos gráficos"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "aQ1Aw0RscexL",
-        "outputId": "cbb86435-4715-45a7-ec98-77d5321e23f3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "fa8b9862-157c-43c9-f749-7c78ee5fdf20"
       },
       "source": [
         "df_forest_cover.hist('Elevation', bins=20)\n",
@@ -3407,18 +3424,18 @@
         "df_forest_cover.hist('Hillshade_3pm', bins=20)\n",
         "df_forest_cover.hist('Horizontal_Distance_To_Fire_Points', bins=20)"
       ],
-      "execution_count": 13,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7f116510fd90>]],\n",
+              "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7f116549bf10>]],\n",
               "      dtype=object)"
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 28
         },
         {
           "output_type": "display_data",
@@ -3543,39 +3560,30 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "mvTMhP--bLh9"
-      },
-      "source": [
-        "2. A partir da visualização elaborada, o que pode-se dizer a respeito do balanceamento do atributo-alvo?"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "eWHso8GhcexL",
-        "outputId": "34a2d056-0b96-4fab-83d5-3d9b952677f3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 315
-        }
+        },
+        "outputId": "7e8a17e8-78ec-470e-c97f-9e17edb2627a"
       },
       "source": [
         "df_forest_cover.hist('Cover_Type')"
       ],
-      "execution_count": 15,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7f1165123d90>]],\n",
+              "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7f1164736790>]],\n",
               "      dtype=object)"
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 29
         },
         {
           "output_type": "display_data",
@@ -3597,7 +3605,7 @@
         "id": "IP5wpbPAbLh-"
       },
       "source": [
-        "**Resposta:** Pode-se afirmar que um número próximo de 500 mil amostras dos dados é classificada como possuindo cobertura do tipo 1 ou 2, ou seja, a grande maioria dos exemplos presentes na base de dados. O tipo 3 corresponde a menor de 50 mil amostras. Os tipos 6 e 7, próximos de 25 mil. Os tipos 4 e 5 são os menos expressivos em termos quantitativos."
+        "**2 - Resposta:** Pode-se afirmar que um número próximo de 500 mil amostras dos dados é classificada como possuindo cobertura do tipo 1 ou 2, ou seja, a grande maioria dos exemplos presentes na base de dados. O tipo 3 corresponde a menor de 50 mil amostras. Os tipos 6 e 7, próximos de 25 mil. Os tipos 4 e 5 são os menos expressivos em termos quantitativos."
       ]
     },
     {
@@ -3606,13 +3614,9 @@
         "id": "I5cpiGvQl5Yf"
       },
       "source": [
-        "3. Que tipo de tarefa de Aprendizado de Máquina é sugestiva para este problema?\n",
-        "3.1 Apresente métricas de desempenho compatíveis para a avaliação do problema (liste-as)  \n",
-        "3.2 Escolha uma das métricas apresentadas para ser utilizada como referência pela equipe\n",
+        "**3 - Resposta:** Como o atributo preditor é um valor discreto (inteiro), a tarefa ideal para o problema é a classificação.\n",
         "\n",
-        "**Resposta:** Como o atributo preditor é um valor discreto (inteiro), a tarefa ideal para o problema é a classificação.\n",
-        "\n",
-        "Quanto às métricas de desempenho para tarefa de classificação, podem ser  utilizadas:\n",
+        "Quanto às métricas de desempenho para tarefa de classificação, abaixo algumas compatíveis com a tarefa de classificação:\n",
         "* Acurácia;\n",
         "* F1 Score;\n",
         "* Recall.\n",
